--- a/src/App.css
+++ b/src/App.css
@@ -28,62 +28,51 @@
 }
 
 .search-div {
-  text-align: center;
   padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 1rem;
 }
+
+.search-box {
+  max-width: 10rem;
+  margin-right: 0.7rem;
+}
+.icon-holder {
+  margin: 0.3rem;
+  padding: 0.7rem;
+  border-radius: 5px;
+}
+
+.gender-icon {
+  height: 1.5rem;
+  width: auto;
+}
+
+.active {
+  background-color: rgba(255, 12, 100, 0.6);
+}
+
+.inactive {
+  background-color: transparent;
+  color: rgb(45, 12, 58);
+}
+
 .all-div {
   padding: 0.5rem;
 }
 .container {
-  margin: 1rem;
   border-radius: 1rem;
   border: solid;
   border-color: blue;
   border-width: 4px;
   background-color: aqua;
+  width: 100%;
 }
 
 .fav-label {
   font-size: 2rem;
   margin-right: 1rem;
   font-family: 'Finger Paint', cursive;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
